[package]
name = "finder"
version = "0.3.0"
edition = "2021"
authors = ["Maximilian Schelkle"]
description = "finder lets you find your files and directories (currently only on Windows). finder was created as a grep clone. It is a hobby project."

[dependencies]
tokio = { version = "1", features = ["full"] }
bitvec = "1.0.1"
clap = { version = "4.5.28", features = ["derive"] }

[dependencies.windows]
version = "0.59.0"
features = ["Win32_Storage_FileSystem"]
